# YCR

./: .gitignore  CMakeLists.txt  README.md  scene.yaml  ycr_standard.txt
include/: bb3.hpp  bdpt.hpp  blender.hpp  bvh.hpp  bxdf.hpp  bxdfc.hpp  camera.hpp  const.hpp  distribution.hpp  film.hpp  filter.hpp  integrator.hpp  itsc.hpp  light.hpp  material.hpp  medium.hpp  mesh.hpp  model.hpp  parallel.hpp  path.hpp  primitive.hpp  ray.hpp  sampler.hpp  scene.hpp  sceneImporter.hpp  texture.hpp  utility.hpp  vertex.hpp
include/debug/: analyse.hpp  pcshow.hpp  renderProc.hpp
include/manager/: textureManager.hpp
include/parser/: parser.hpp  resourceManager.hpp
src/: bdpt.cpp  bvh.cpp  bxdf.cpp  film.cpp  integrator.cpp  light.cpp  material.cpp  medium.cpp  mesh.cpp  model.cpp  parallel.cpp  path.cpp  primitive.cpp  sampler.cpp  scene.cpp  sceneImporter.cpp  texture.cpp
tests/: test0.cpp  test1.cpp  test2.cpp  test3.cpp
